Added some instructions

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -14,4 +14,10 @@
     Take a look at the <code>src/pages/</code> directory to add or change tabs,
     update any existing page or create new pages.
   </p>
+  <p>
+    Click on the <b>Jokes</b> tab. The jokes are fetched from a REST service
+    and stored locally.
+    When clicking on a Joke it is fetched from the local storage
+    unless it isn't found and the REST service is called.
+  </p>
 </ion-content>
