--- a/src/pages/joke-list-page/joke-list-page.html
+++ b/src/pages/joke-list-page/joke-list-page.html
@@ -14,6 +14,9 @@
 
 
 <ion-content padding>
+  <p>Open the console to see the behaviour:</p>
+  <p>Reading from REST add stashing/storing locally.</p>
+  <p>Jokes are now read from local stash/storage when clicked.</p>
   <ion-list inset>
     <button ion-item *ngFor="let joke of jokes" (click)="itemSelected(joke)">
       {{ joke.joke }}
